# ML2-exercises

Ex1/ml-with-abstention/: CMakeLists.txt
Ex1/ml-with-abstention/include/: algorithms.hxx  conjunction.hxx  dnf.hxx  log.hxx  mnist_loader.hxx  mnist_utils.hxx
Ex1/ml-with-abstention/src/: main.cxx
Ex1/ml-with-abstention/test/: conjunction.cxx  dnf.cxx
Ex1/ml-with-abstention/trial/: trial.sln  trial.vcxproj
